[AF] Clear profile pieces when deleting data in time range.

Previously is only deleted form the main profile table. The sub tables
need to be deleted too.

Bug: 836737
Change-Id: I1e5fc74ace5b073cc66fcece422c2fd50d208743
Reviewed-on: https://chromium-review.googlesource.com/1031311
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554410}
Former-commit-id: 3f86ebce5e49c5c5bf2fa6e4dd23ed0603c15be9